# ChangeLog for app-text/pdfjam
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/pdfjam/ChangeLog,v 1.14 2007/08/13 20:06:16 corsair Exp $

  13 Aug 2007; Markus Rothe <corsair@gentoo.org> pdfjam-1.20.ebuild:
  Added ~ppc64

  12 Mar 2007; Alexandre Buisse <nattfodd@gentoo.org> metadata.xml:
  Replaced text-markup by tex as maintaining herd (text-markup split).

  05 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  24 Dec 2005; Michael Hanselmann <hansmi@gentoo.org> pdfjam-1.20.ebuild:
  Stable on ppc.

  10 Dec 2005; Simon Stelling <blubb@gentoo.org> pdfjam-1.20.ebuild:
  stable on amd64

  03 Dec 2005; Chris White <chriswhite@gentoo.org> pdfjam-1.20.ebuild:
  x86 stable for bug #114328.

  24 Apr 2005; Michael Hanselmann <hansmi@gentoo.org> pdfjam-1.10.ebuild:
  Stable on ppc.

  21 Apr 2005; Simon Stelling <blubb@gentoo.org> pdfjam-1.10.ebuild:
  stable on amd64

*pdfjam-1.20 (21 Feb 2005)

  21 Feb 2005; Mamoru KOMACHI <usata@gentoo.org> +pdfjam-1.20.ebuild:
  Version bumped; bug #82688. Thanks to Till Maas <opensource@gmx.net> for
  fixing manpages.

  27 Nov 2004; <pclouds@gentoo.org> pdfjam-1.10.ebuild,+metadata.xml:
  Marked 1.10 stable on x86. Added missing metadata.xml

  06 Sep 2004; Danny van Dyk <kugelfang@gentoo.org> pdfjam-1.10.ebuild:
  Marked ~amd64.

  03 Aug 2004; David Holm <dholm@gentoo.org> pdfjam-1.10.ebuild:
  Added to ~ppc.

*pdfjam-1.10 (30 Jul 2004)

  30 Jul 2004; <pclouds@gentoo.org> +pdfjam-1.10.ebuild:
  new ebuild, submitted by Dominic Battre <dominic.battre@gmx.de> on bug 57567
