@@ -1,6 +1,6 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/pdfjam/pdfjam-1.20.ebuild,v 1.5 2007/08/13 20:06:16 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/pdfjam/pdfjam-1.20.ebuild,v 1.6 2008/06/10 18:27:25 aballier Exp $
 
 EAPI="prefix"
 
@@ -14,7 +14,7 @@ KEYWORDS="~amd64-linux ~x86-linux ~ppc-macos ~x86-macos"
 IUSE=""
 S=${WORKDIR}/${PN}
 
-DEPEND="virtual/tetex"
+DEPEND="virtual/latex-base"
 
 src_compile() {
 	for i in pdf90 pdfjoin pdfnup; do
