@@ -1,6 +1,12 @@
 # ChangeLog for app-text/pdfjam
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/pdfjam/ChangeLog,v 1.14 2007/08/13 20:06:16 corsair Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-text/pdfjam/ChangeLog,v 1.16 2008/06/10 18:28:54 aballier Exp $
+
+  10 Jun 2008; Alexis Ballier <aballier@gentoo.org> -pdfjam-1.10.ebuild:
+  remove old
+
+  10 Jun 2008; Alexis Ballier <aballier@gentoo.org> pdfjam-1.20.ebuild:
+  depend on latex-base instead of tetex, bug #225315
 
   13 Aug 2007; Markus Rothe <corsair@gentoo.org> pdfjam-1.20.ebuild:
   Added ~ppc64
